# ai-rag-local

./: .gitignore  README.md  project_context.md  pyproject.toml
documents/: codex_system_prompt.md
examples/: lions_tigers_retrieval_eval_examples.md  retrieval_eval_examples.md
src/rag_assistant/: __init__.py  cli.py  config.py  document_loader.py  embeddings.py  evaluation.py  library_store.py  llm_client.py  profile_store.py  prompt_builder.py  rag_pipeline.py  retriever.py  schema.py  summarizer.py  text_splitter.py  vector_store.py  web_app.py
tests/: test_cli.py  test_document_loader.py  test_embeddings.py  test_evaluation.py  test_profile_store.py  test_prompt_builder.py  test_rag_pipeline.py  test_retriever.py  test_summarizer.py  test_text_splitter.py  test_vector_store.py  test_web_app.py
